--- a/index.html
+++ b/index.html
@@ -5615,7 +5615,7 @@
         "namedChunks": []
     }</script>
     <script defer="" data-chunk="bundle" src="res/common.js"></script>
-<!--    <script defer="" data-chunk="bundle" src="res/bundle.js"></script>-->
+    <script defer="" data-chunk="bundle" src="res/bundle.js"></script>
 
     <script src="https://csvcus.homeaway.com/rsrcs-crs/edap-integrations/11.54.0/javascripts/edap-integrations.min.js?cors=true" defer="" crossorigin="anonymous"></script>
 
