--- a/index.html
+++ b/index.html
@@ -5584,8 +5584,8 @@
         }, true);
     </script>
 
-    <script type="text/javascript" src="https://ars.homeaway.com/polyfill.min.js?features=vrbo-default&amp;v=9" defer="" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="https://ars.homeaway.com/vrbo-analytics.min.js?v=11" defer="" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="res/polyfill.js?features=vrbo-default&amp;v=9" defer="" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="res/vrbo-analytics.js?v=11" defer="" crossorigin="anonymous"></script>
     <script type="text/javascript">
         window.onCriticalReady = function (fn) {
             window.onPolyfillsReady = window.onPolyfillsReady || [];
