--- a/index.html
+++ b/index.html
@@ -1576,7 +1576,8 @@
         }
     }(window && window.Osano && window.Osano.cm);</script>
 
-    <style>@keyframes shimmer {
+    <style>
+        @keyframes shimmer {
                0% {
                    background-position: 200%
                }
@@ -5967,7 +5968,7 @@
                                                             <div class="form-group position-relative form-combined__input1">
                                                                 <div class="form-group floating-label not-empty has-icon"><input type="text"
                                                                                                                                  class="form-control form-control--arrival form-control--no-arrow"
-                                                                                                                                 aria-invalid="false" readonly="" name="check-in" value="17/12/2021"
+                                                                                                                                 aria-invalid="false" readonly="" name="check-in" value=""
                                                                                                                                  data-wdio="date-range-input-start"
                                                                                                                                  aria-label="Check-in date expanded. Choose a date from the table below. Tab into the table and use the arrow keys for navigation."
                                                                                                                                  id="input1-dates" placeholder="Entrada"><label class="has-icon"
@@ -6000,7 +6001,7 @@
                                                             <div class="form-group position-relative form-combined__input2" aria-hidden="true">
                                                                 <div class="form-group floating-label not-empty has-icon"><input type="text"
                                                                                                                                  class="form-control form-control--departure DateRangePicker__FormInput-departure form-control--no-arrow"
-                                                                                                                                 aria-invalid="false" readonly="" name="check-out" value="19/12/2021"
+                                                                                                                                 aria-invalid="false" readonly="" name="check-out" value=""
                                                                                                                                  data-wdio="date-range-input-end" tabindex="-1" id="input2-dates"
                                                                                                                                  aria-label="Salida" placeholder="Salida"><label class="has-icon"
                                                                                                                                                                                  for="input2-dates">Salida</label><span
