--- a/reserva3.html
+++ b/reserva3.html
@@ -8580,7 +8580,7 @@
                                                     class="btn__label">Aceptar y continuar</span></button>
                                         </div>
                                         <div class="hidden-xs flex">
-                                            <button onclick="window.location.href='reserva2.html'" class="btn-link btn-lg stepped-checkout-back-btn"><span class="SVGIcon SVGIcon--16px SVGIcon--inline"><svg data-id="SVG_CHEVRON_LEFT__16"
+                                            <button class="btn-link btn-lg stepped-checkout-back-btn"><span class="SVGIcon SVGIcon--16px SVGIcon--inline"><svg data-id="SVG_CHEVRON_LEFT__16"
                                                                                                                                                                focusable="false"
                                                                                                                                                                xmlns="http://www.w3.org/2000/svg"
                                                                                                                                                                width="16" height="16" fill="none"
@@ -9334,7 +9334,7 @@
                                                             actívala en tu banco antes de reservar.
                                                         </div>
                                                         <div class="nav-container inline-block width-100">
-                                                            <button class="js-steppedCheckoutBack btn-link btn-lg stepped-checkout-back-btn hidden-xs">
+                                                            <button onclick="window.location.href='reserva2.html'" class="js-steppedCheckoutBack btn-link btn-lg stepped-checkout-back-btn hidden-xs">
                                                                 <span class="SVGIcon SVGIcon--16px SVGIcon--inline"><svg data-id="SVG_CHEVRON_LEFT__16" width="16" height="16" viewBox="0 0 16 16"
                                                                                                                          xmlns="http://www.w3.org/2000/svg"><path fill="none" stroke-linecap="round"
                                                                                                                                                                   stroke-linejoin="round"
