--- a/search.html
+++ b/search.html
@@ -7106,7 +7106,7 @@
     <header role="banner"><span class="sr-only" tabindex="-1" id="skipToPageHeader">Encabezado del sitio web</span>
         <div class="site-header--wrapper">
             <div class="site-header border-border-color vrbo">
-                <div class="site-header-logo"><a class="site-header-logo__link flex-item" href="https://www.vrbo.com//" title="Vrbo España"><img alt="Vrbo logotipo"
+                <div class="site-header-logo"><a class="site-header-logo__link flex-item" href="https://rjcr-uoc.github.io/" title="Vrbo España"><img alt="Vrbo logotipo"
                                                                                                                                                  class="site-header-logo__img Header-BG img-responsive"
                                                                                                                                                  src="//csvcus.homeaway.com/rsrcs/cdn-logos/5.8.0/sitename/vrbo/web/logo.svg"></a>
                 </div>
@@ -10511,7 +10511,7 @@
             "brandId": "615",
             "domainName": "vrbo.com",
             "environment": "production",
-            "fullURL": "http:\u002F\u002Fwww.vrbo.com\u002Fes-es",
+            "fullURL": "https:\u002F\u002Frjcr-uoc.github.io\u002F",
             "geocountry": "ES",
             "isAndroid": false,
             "isBot": false,
@@ -10844,7 +10844,7 @@
         "content": {
             "header": {
                 "logo": {
-                    "link": "https:\u002F\u002Fwww.vrbo.com\u002Fes-es\u002F",
+                    "link": "https:\u002F\u002Frjcr-uoc.github.io\u002F",
                     "text": "Vrbo España",
                     "image": "\u002F\u002Fcsvcus.homeaway.com\u002Frsrcs\u002Fcdn-logos\u002F5.8.0\u002Fsitename\u002Fvrbo\u002Fweb\u002Flogo.svg",
                     "altText": "Vrbo logotipo"
